--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         }
         .alert button {
             background-color: #252525;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
             color: #aeff58;
             border: none;
             padding: 10px 20px;
